# databox

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dagster  LICENSE  README.md  Taskfile.yaml  conftest.py  docker-compose.yml  hello.py  mkdocs.yml  pyproject.toml  release-please-config.json  scaffold.yaml  workspace.yaml
.10x/: README.md
.10x/decisions/: arizona-catalog-observation-and-watch-match-boundaries.md  autonomous-turbo-search-engineering-research.md  avonet-atomic-staged-publication.md  avonet-only-modeled-bird-traits.md  bird-alert-retry-and-event-lifecycle.md  catalog-media-and-watch-only-collection.md  cross-source-bird-species-conformance.md  curated-inaturalist-only-representative-photos.md  inaturalist-curated-photo-api-split.md  local-only-birding-product-architecture.md  local-single-user-birding-pokedex-expansion.md  personal-collection-and-target-planning-lifecycle.md  proton-bridge-smtp-for-bird-alerts.md  python-source-registry-as-canonical-contract.md  request-time-recommendation-media-enrichment.md  rufous-catalog-discovery-and-field-map.md  rufous-local-hotspot-fallback-policy.md  rufous-local-place-suggestions-and-feedback.md  rufous-product-identity-and-retro-visual-direction.md  rufous-wheel-map-preview-and-source-refresh.md  trip-plan-calendar-invitation-lifecycle.md  trip-planner-ebird-evidence-eligibility.md  watch-only-collection-supersession-scope.md  watched-bird-alert-delivery-policy.md
.10x/evidence/: 2026-07-07-annotate-sources-skill-test.md  2026-07-07-cdm-sqlmesh-migration.md  2026-07-07-create-ontology-output.md  2026-07-08-birding-planner-sql-interfaces.md  2026-07-08-gbif-source-pipeline.md  2026-07-08-local-artifact-cleanup.md  2026-07-08-open-meteo-trip-context-tool.md  2026-07-08-quack-dlt-state-restore-fix.md  2026-07-08-quack-raw-schema-alignment.md  2026-07-08-xeno-canto-source-pipeline.md  2026-07-09-adk-runner-telemetry-cleanup.md  2026-07-09-adk-trip-planner-persistence.md  2026-07-09-arizona-location-search-and-validation.md  2026-07-09-birding-agent-deepeval-suite.md  2026-07-09-birding-trip-copilot-aggregate-validation.md  2026-07-09-cdm-workflow-gbif-xeno-canto.md  2026-07-09-cloudflare-workers-ai-adk-integration.md  2026-07-09-cross-source-species-conformance.md  2026-07-09-existing-plan-media-backfill.md  2026-07-09-glm-5-2-compatibility-probe.md  2026-07-09-glm-5-2-model-replacement.md  2026-07-09-local-birding-product-aggregate-verification.md  2026-07-09-local-react-trip-planner.md  2026-07-09-motherduck-platform-decommission.md  2026-07-09-parallel-quack-local-refresh.md  2026-07-09-recommendation-card-media-aggregate-verification.md  2026-07-09-recommendation-card-media-layout.md  2026-07-09-request-time-recommendation-media.md  2026-07-09-species-and-weather-presentation.md  2026-07-09-sqlmesh-prod-restate-new-models.md  2026-07-09-trip-plan-motherduck-dive.md  2026-07-09-trip-plan-result-pagination.md  2026-07-09-trip-planner-experience-improvements-aggregate-verification.md  2026-07-09-xeno-canto-inline-audio.md  2026-07-10-arizona-bird-catalog-and-profile.md  2026-07-10-avonet-bird-traits-source.md  2026-07-10-avonet-sqlmesh-production-lint-and-apply.md  2026-07-10-avonet-traits-arizona-catalog-models.md  2026-07-10-bird-alert-calendar-and-outbox.md  (+74 more)
.10x/specs/: rufous-field-map.md  (+37 more)
.claude/: settings.local.json
.dive-preview/: package-lock.json  package.json
.github/: dependabot.yml
app/: index.html  main.py  package-lock.json  package.json  vite.config.ts
cli/: __init__.py  main.py
config/: __init__.py  pipeline_config.py  settings.py
databox/: __init__.py  cli.py
docs/: DOCKER.md  analytics-examples.md  ci.md  commands.md  configuration.md  contracts.md  cost.md  environments.md  freshness.md  incremental-loading.md  index.md  metrics.md  new-source.md  observability.md  runbook.md  secrets.md  source-layout.md  source-typing.md  staging.md  template.md
migrations/: 20260711_structured_observation_locations.sql  20260711_trip_plan_calendar.sql
notebooks/: metrics_demo.ipynb
orchestration/: README.md  __init__.py  dagster_project.py  definitions.py
pipelines/: __init__.py  base.py  registry.py
quality/: engine.py
scripts/: audit_app_bundle.py  bootstrap.py  catalog_media.py  check_secrets.py  check_source_layout.py  check_source_modeling.py  deliver_bird_alerts.py  generate_docs.py  generate_platform_health.py  generate_staging.py  load_dlt_quack.py  new_source.py  remediate_trip_planner_ebird_privacy.py  remove_wishlist_storage.py  render_cost_page.py  render_notebooks.py  run-logged.sh  run_local_app.py  schema_gate.py  setup_db_roles.sql  setup_example_data.py  setup_pre_commit.sh  smoke.py  smoke_cloudflare_ai.py  source_ci.py  sqlmesh_plan_prod.sh  verify_bird_alert_smtp.py  verify_dev.py
soda/: datasource.yaml
sources/: base.py  registry.py
tests/: conftest.py  factories.py  test_api.py  test_arizona_boundary.py  test_arizona_boundary_artifact.py  test_audit_app_bundle.py  test_avonet_catalog_models.py  test_avonet_orchestration.py  test_bird_alert_delivery.py  test_bird_alert_outbox.py  test_bird_catalog_api.py  test_birding_trip_planner.py  test_bootstrap.py  test_catalog_media.py  test_check_source_layout.py  test_cli.py  test_cloudflare_workers_ai.py  test_config.py  test_curated_photo.py  test_dagster.py  test_e2e.py  test_ebird_api.py  test_ebird_models.py  test_factories.py  test_map_snapshot_api.py  test_metrics.py  test_motherduck_autocreate.py  test_new_source.py  test_noaa_api.py  test_open_meteo_geocoding.py  test_open_meteo_tool.py  test_openlineage_sensor.py  test_parallel_refresh.py  test_personal_collection_api.py  test_place_suggestions.py  test_quack_destinations.py  test_recommendation_media.py  test_recommendation_media_backfill.py  test_registry.py  test_remove_wishlist.py  (+17 more)
transformations/: CLAUDE.md
(+693 files in other folders)
