[project]
name = "databox"
version = "0.2.0"
description = "Dataset-agnostic data pipeline tool"
requires-python = ">=3.12"
dependencies = [
    "databox-config",
    "databox-sources",
    "databox-quality",
    "databox-orchestration",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "faker>=30.0",
    "responses>=0.25",
    "pre-commit>=4.0",
    "ruff>=0.12.5",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
databox-config = { workspace = true }
databox-sources = { workspace = true }
databox-quality = { workspace = true }
databox-orchestration = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: isolated unit tests (no DB, no API)",
    "integration: multi-component tests with real DB",
    "e2e: full stack tests",
    "slow: tests that take >5s",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
