[project]
name = "databox-workspace"
version = "0.2.0"
description = "Databox uv workspace root (coordinator, not packaged)"
requires-python = ">=3.12"
dependencies = [
    "databox",
    "databox-sources",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "faker>=30.0",
    "responses>=0.25",
    "pre-commit>=4.0",
    "ruff>=0.12.5",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "pytest-recording>=0.13",
    "syrupy>=4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "nbconvert>=7.16",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "nbstripout>=0.7",
    # openlineage-python is also the `lineage` extra on the databox package; keep
    # it in dev so CI can execute the OL sensor tests without the extra.
    "openlineage-python>=1.20.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
databox = { workspace = true }
databox-sources = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: isolated unit tests (no DB, no API)",
    "integration: multi-component tests with real DB",
    "e2e: full stack tests",
    "slow: tests that take >5s",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
